syntax = "proto3";
package v1;

option go_package = "github.com/mephistolie/chefbook-backend-auth/api/proto/v1";

message RequestPasswordResetRequest {
  string email = 1;
  string nickname = 2;
}

message RequestPasswordResetResponse {
  string message = 1;
}
